--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Alura Plus</title>
 </head>
 <body>
-    
+    <section class="container principal">
+        <h1 class="titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="assets/Combo.png" alt="O combo+ é a junção do alura+ com alura lingua">
+    </section>
 </body>
 </html>
