--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Alura Plus</title>
 </head>
 <body>
-    <section class="container principal">
-        <h1 class="titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="assets/Combo.png" alt="O combo+ é a junção do alura+ com alura lingua">
-    </section>
+        <section class="container principal">
+            <div>
+                <h1 class="titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+                <img src="assets/Combo.png" alt="O combo+ é a junção do alura+ com alura lingua">
+                <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
+                <a class="container__botao botao_secundario" href="wwww.alura.com.br">Asinar somente o Alura+</a>
+                <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            </div>
+        </section>
 </body>
 </html>
