--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Alura Plus</title>
 </head>
 <body>
+        
         <section class="container principal">
             <div class="container__caixa">
                 <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
@@ -21,8 +22,21 @@
             <img class="secundario__img" src="assets/Pixel True Mockup 1.png" alt="Um monitor e um celula com o alura plus aberto">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Assista do seu jeito</h2>
-                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.
+                </p>
             </div>
         </section>
+
+        <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">
+                    Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                </p>
+                <a class="container__botao secundario__botao" href="www.alura.com.br">Assinar o Combo+</a>
+            </div>
+            <img class="secundario__img" src="assets/Telas.png" alt="Tela da alura plus e do alura lingua">
+        </section>
+
+
 </body>
 </html>
