--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Alura Plus</title>
 </head>
 <body>
-        
+        <!--primeira secção-->
         <section class="container principal">
             <div class="container__caixa">
                 <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
@@ -18,15 +18,18 @@
             </div>
         </section>
 
+        <!--segunda secção-->
         <section class="container secundario">
             <img class="secundario__img" src="assets/Pixel True Mockup 1.png" alt="Um monitor e um celula com o alura plus aberto">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Assista do seu jeito</h2>
-                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.
+                <p class="descricao__texto">
+                    Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.
                 </p>
             </div>
         </section>
 
+        <!--terceira secção-->
         <section class="container secundario">
             <div class="container__descricao">
                 <p class="descricao__texto">
@@ -35,6 +38,17 @@
                 <a class="container__botao secundario__botao" href="www.alura.com.br">Assinar o Combo+</a>
             </div>
             <img class="secundario__img" src="assets/Telas.png" alt="Tela da alura plus e do alura lingua">
+        </section>
+
+        <!--Quarta secção-->
+        <section class="container secundario">
+            <img class="secundario__img" src="assets/Notebook.png" alt="Tela do alura plus para baixar seu curso">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Baixe seus cursos</h2>
+                <p class="descricao__texto">
+                    Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+                </p>
+            </div>
         </section>
 
 
