--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
             </div>
         </section>
 
+        <!--Quinta secção-->
+        <section class="dispositivos">
+            <h2 class="dispositivos__titulos">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="assets/tv.png" alt="Iconi de televisão">
+                    <h3 class="lista__item">TV</h3>
+                </li>
+                <li>
+                    <img src="assets/computador.png" alt="Iconi do Computador">
+                    <h3 class="lista__item">Computadores</h3>
+                </li>
+                <li>
+                    <img src="assets/celular.png" alt="Iconi do Celular">
+                    <h3 class="lista__item">Celulares e Tablets</h3>
+                </li>
+            </ul>
+        </section>
 
 </body>
 </html>
