--- a/index.html
+++ b/index.html
@@ -70,5 +70,38 @@
             </ul>
         </section>
 
+        <footer class="rodape">
+            <img class="rodape__logo" src="assets/Logo.png" alt="Alura+">
+            <ul class="rodape__lista">
+                <li class="lista__link">
+                    <a class="lista__link" href="#">Idioma</a>
+                </li>
+                <li class="lista__link">
+                    <a class="lista__link" href="#">Dispositivos compatíveis</a>
+                </li>
+                 <li class="lista__link">
+                    <a class="lista__link" href="#">Contrato de assinatura</a>
+                </li>
+                 <li class="lista__link">
+                    <a class="lista__link" href="#">Politica de privacidade</a>
+                </li>
+                 <li class="lista__link">
+                    <a class="lista__link" href="#">Proteção de dados no Brasil</a>
+                </li>
+                <li class="lista__link">
+                    <a class="lista__link" href="#">Anuncios personalizados</a>
+                </li>
+                <li class="lista__link">
+                    <a class="lista__link" href="#">Ajuda</a>
+                </li>
+            </ul>
+
+            <section>
+                <h3>
+                    ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+                </h3>
+            </section>
+        </footer>
+
 </body>
 </html>
