--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                     <a class="lista__link" href="#">Ajuda</a>
                 </li>
             </ul>
-
-            <section>
-                <h3>
+                <p class="rodape__texto">
                     ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
-                </h3>
-            </section>
+                </p>
+                <p class="rodape__texto">
+                    Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+                </p>
         </footer>
 
 </body>
