--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <h2 class="dispositivos__titulos">Disponível nos seus dispositivos favoritos</h2>
             <ul class="dispositivos__lista">
                 <li>
-                    <img src="assets/tv.png" alt="Iconi de televisão">
-                    <h3 class="lista__item">TV</h3>
+                    <img class="lista__tamanho" src="assets/tv.png" alt="Iconi de televisão">
+                    <h3 class="lista__item lista__tamanho">TV</h3>
                 </li>
                 <li>
                     <img src="assets/computador.png" alt="Iconi do Computador">
